ParcialCorte2/Punto2/CRUDParser.java
// Generated from CRUD.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class CRUDParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, CREATE=8, TABLE=9, 
		INSERT=10, INTO=11, VALUES=12, SELECT=13, FROM=14, WHERE=15, UPDATE=16, 
		SET=17, DELETE=18, AND=19, OR=20, NOT=21, TRUE=22, FALSE=23, INT=24, FLOAT=25, 
		TEXT=26, PRIMARY=27, KEY=28, EQ=29, NEQ=30, LE=31, LT=32, GE=33, GT=34, 
		STAR=35, ID=36, NUM=37, STR=38, WS=39, LINE_CMT=40, BLOCK_CMT=41;
	public static final int
		RULE_programa = 0, RULE_sentenciaLista = 1, RULE_sentencia = 2, RULE_createTable = 3, 
		RULE_defCampoLista = 4, RULE_defCampo = 5, RULE_tipo = 6, RULE_optPK = 7, 
		RULE_insertStmt = 8, RULE_optCols = 9, RULE_idLista = 10, RULE_valorLista = 11, 
		RULE_valor = 12, RULE_selectStmt = 13, RULE_seleccion = 14, RULE_optWhere = 15, 
		RULE_updateStmt = 16, RULE_asignLista = 17, RULE_asign = 18, RULE_deleteStmt = 19, 
		RULE_expr = 20, RULE_term = 21, RULE_fact = 22, RULE_rel = 23, RULE_opRel = 24, 
		RULE_boolExpr = 25, RULE_boolT = 26, RULE_boolF = 27;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "sentenciaLista", "sentencia", "createTable", "defCampoLista", 
			"defCampo", "tipo", "optPK", "insertStmt", "optCols", "idLista", "valorLista", 
			"valor", "selectStmt", "seleccion", "optWhere", "updateStmt", "asignLista", 
			"asign", "deleteStmt", "expr", "term", "fact", "rel", "opRel", "boolExpr", 
			"boolT", "boolF"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'('", "')'", "','", "'+'", "'-'", "'/'", "'CREATE'", "'TABLE'", 
			"'INSERT'", "'INTO'", "'VALUES'", "'SELECT'", "'FROM'", "'WHERE'", "'UPDATE'", 
			"'SET'", "'DELETE'", "'AND'", "'OR'", "'NOT'", "'TRUE'", "'FALSE'", "'INT'", 
			"'FLOAT'", "'TEXT'", "'PRIMARY'", "'KEY'", "'='", "'<>'", "'<='", "'<'", 
			"'>='", "'>'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "CREATE", "TABLE", "INSERT", 
			"INTO", "VALUES", "SELECT", "FROM", "WHERE", "UPDATE", "SET", "DELETE", 
			"AND", "OR", "NOT", "TRUE", "FALSE", "INT", "FLOAT", "TEXT", "PRIMARY", 
			"KEY", "EQ", "NEQ", "LE", "LT", "GE", "GT", "STAR", "ID", "NUM", "STR", 
			"WS", "LINE_CMT", "BLOCK_CMT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CRUD.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CRUDParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public SentenciaListaContext sentenciaLista() {
			return getRuleContext(SentenciaListaContext.class,0);
		}
		public TerminalNode EOF() { return getToken(CRUDParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			sentenciaLista();
			setState(57);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaListaContext extends ParserRuleContext {
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public SentenciaListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentenciaLista; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitSentenciaLista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaListaContext sentenciaLista() throws RecognitionException {
		SentenciaListaContext _localctx = new SentenciaListaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sentenciaLista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 337152L) != 0)) {
				{
				{
				setState(59);
				sentencia();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SentenciaContext extends ParserRuleContext {
		public CreateTableContext createTable() {
			return getRuleContext(CreateTableContext.class,0);
		}
		public InsertStmtContext insertStmt() {
			return getRuleContext(InsertStmtContext.class,0);
		}
		public SelectStmtContext selectStmt() {
			return getRuleContext(SelectStmtContext.class,0);
		}
		public UpdateStmtContext updateStmt() {
			return getRuleContext(UpdateStmtContext.class,0);
		}
		public DeleteStmtContext deleteStmt() {
			return getRuleContext(DeleteStmtContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitSentencia(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_sentencia);
		try {
			setState(80);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CREATE:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				createTable();
				setState(66);
				match(T__0);
				}
				break;
			case INSERT:
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				insertStmt();
				setState(69);
				match(T__0);
				}
				break;
			case SELECT:
				enterOuterAlt(_localctx, 3);
				{
				setState(71);
				selectStmt();
				setState(72);
				match(T__0);
				}
				break;
			case UPDATE:
				enterOuterAlt(_localctx, 4);
				{
				setState(74);
				updateStmt();
				setState(75);
				match(T__0);
				}
				break;
			case DELETE:
				enterOuterAlt(_localctx, 5);
				{
				setState(77);
				deleteStmt();
				setState(78);
				match(T__0);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CreateTableContext extends ParserRuleContext {
		public TerminalNode CREATE() { return getToken(CRUDParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(CRUDParser.TABLE, 0); }
		public TerminalNode ID() { return getToken(CRUDParser.ID, 0); }
		public DefCampoListaContext defCampoLista() {
			return getRuleContext(DefCampoListaContext.class,0);
		}
		public OptPKContext optPK() {
			return getRuleContext(OptPKContext.class,0);
		}
		public CreateTableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_createTable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitCreateTable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CreateTableContext createTable() throws RecognitionException {
		CreateTableContext _localctx = new CreateTableContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_createTable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(CREATE);
			setState(83);
			match(TABLE);
			setState(84);
			match(ID);
			setState(85);
			match(T__1);
			setState(86);
			defCampoLista();
			setState(87);
			optPK();
			setState(88);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefCampoListaContext extends ParserRuleContext {
		public List<DefCampoContext> defCampo() {
			return getRuleContexts(DefCampoContext.class);
		}
		public DefCampoContext defCampo(int i) {
			return getRuleContext(DefCampoContext.class,i);
		}
		public DefCampoListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defCampoLista; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitDefCampoLista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefCampoListaContext defCampoLista() throws RecognitionException {
		DefCampoListaContext _localctx = new DefCampoListaContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_defCampoLista);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			defCampo();
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(91);
					match(T__3);
					setState(92);
					defCampo();
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DefCampoContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CRUDParser.ID, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public DefCampoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defCampo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitDefCampo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefCampoContext defCampo() throws RecognitionException {
		DefCampoContext _localctx = new DefCampoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_defCampo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(ID);
			setState(99);
			tipo();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TipoContext extends ParserRuleContext {
		public TerminalNode INT() { return getToken(CRUDParser.INT, 0); }
		public TerminalNode FLOAT() { return getToken(CRUDParser.FLOAT, 0); }
		public TerminalNode TEXT() { return getToken(CRUDParser.TEXT, 0); }
		public TipoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitTipo(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TipoContext tipo() throws RecognitionException {
		TipoContext _localctx = new TipoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_tipo);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 117440512L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptPKContext extends ParserRuleContext {
		public TerminalNode PRIMARY() { return getToken(CRUDParser.PRIMARY, 0); }
		public TerminalNode KEY() { return getToken(CRUDParser.KEY, 0); }
		public TerminalNode ID() { return getToken(CRUDParser.ID, 0); }
		public OptPKContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optPK; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitOptPK(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptPKContext optPK() throws RecognitionException {
		OptPKContext _localctx = new OptPKContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_optPK);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(103);
				match(T__3);
				setState(104);
				match(PRIMARY);
				setState(105);
				match(KEY);
				setState(106);
				match(T__1);
				setState(107);
				match(ID);
				setState(108);
				match(T__2);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InsertStmtContext extends ParserRuleContext {
		public TerminalNode INSERT() { return getToken(CRUDParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(CRUDParser.INTO, 0); }
		public TerminalNode ID() { return getToken(CRUDParser.ID, 0); }
		public OptColsContext optCols() {
			return getRuleContext(OptColsContext.class,0);
		}
		public TerminalNode VALUES() { return getToken(CRUDParser.VALUES, 0); }
		public ValorListaContext valorLista() {
			return getRuleContext(ValorListaContext.class,0);
		}
		public InsertStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insertStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitInsertStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InsertStmtContext insertStmt() throws RecognitionException {
		InsertStmtContext _localctx = new InsertStmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_insertStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(INSERT);
			setState(112);
			match(INTO);
			setState(113);
			match(ID);
			setState(114);
			optCols();
			setState(115);
			match(VALUES);
			setState(116);
			match(T__1);
			setState(117);
			valorLista();
			setState(118);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptColsContext extends ParserRuleContext {
		public IdListaContext idLista() {
			return getRuleContext(IdListaContext.class,0);
		}
		public OptColsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optCols; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitOptCols(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptColsContext optCols() throws RecognitionException {
		OptColsContext _localctx = new OptColsContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_optCols);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(120);
				match(T__1);
				setState(121);
				idLista();
				setState(122);
				match(T__2);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IdListaContext extends ParserRuleContext {
		public List<TerminalNode> ID() { return getTokens(CRUDParser.ID); }
		public TerminalNode ID(int i) {
			return getToken(CRUDParser.ID, i);
		}
		public IdListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_idLista; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitIdLista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IdListaContext idLista() throws RecognitionException {
		IdListaContext _localctx = new IdListaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_idLista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(ID);
			setState(131);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(127);
				match(T__3);
				setState(128);
				match(ID);
				}
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValorListaContext extends ParserRuleContext {
		public List<ValorContext> valor() {
			return getRuleContexts(ValorContext.class);
		}
		public ValorContext valor(int i) {
			return getRuleContext(ValorContext.class,i);
		}
		public ValorListaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valorLista; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitValorLista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValorListaContext valorLista() throws RecognitionException {
		ValorListaContext _localctx = new ValorListaContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_valorLista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134);
			valor();
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__3) {
				{
				{
				setState(135);
				match(T__3);
				setState(136);
				valor();
				}
				}
				setState(141);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ValorContext extends ParserRuleContext {
		public TerminalNode NUM() { return getToken(CRUDParser.NUM, 0); }
		public TerminalNode STR() { return getToken(CRUDParser.STR, 0); }
		public TerminalNode TRUE() { return getToken(CRUDParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(CRUDParser.FALSE, 0); }
		public ValorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valor; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitValor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ValorContext valor() throws RecognitionException {
		ValorContext _localctx = new ValorContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_valor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(142);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 412329443328L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SelectStmtContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(CRUDParser.SELECT, 0); }
		public SeleccionContext seleccion() {
			return getRuleContext(SeleccionContext.class,0);
		}
		public TerminalNode FROM() { return getToken(CRUDParser.FROM, 0); }
		public TerminalNode ID() { return getToken(CRUDParser.ID, 0); }
		public OptWhereContext optWhere() {
			return getRuleContext(OptWhereContext.class,0);
		}
		public SelectStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitSelectStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SelectStmtContext selectStmt() throws RecognitionException {
		SelectStmtContext _localctx = new SelectStmtContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_selectStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(SELECT);
			setState(145);
			seleccion();
			setState(146);
			match(FROM);
			setState(147);
			match(ID);
			setState(148);
			optWhere();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SeleccionContext extends ParserRuleContext {
		public TerminalNode STAR() { return getToken(CRUDParser.STAR, 0); }
		public IdListaContext idLista() {
			return getRuleContext(IdListaContext.class,0);
		}
		public SeleccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_seleccion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitSeleccion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SeleccionContext seleccion() throws RecognitionException {
		SeleccionContext _localctx = new SeleccionContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_seleccion);
		try {
			setState(152);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				match(STAR);
				}
				break;
			case ID:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				idLista();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptWhereContext extends ParserRuleContext {
		public TerminalNode WHERE() { return getToken(CRUDParser.WHERE, 0); }
		public BoolExprContext boolExpr() {
			return getRuleContext(BoolExprContext.class,0);
		}
		public OptWhereContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optWhere; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CRUDVisitor ) return ((CRUDVisitor<? extends T>)visitor).visitOptWhere(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptWhereContext optWhere() throws RecognitionException {
		OptWhereContext _localctx = new OptWhereContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_optWhere);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(154);
				match(WHERE);
				setState(155);
				boolExpr();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
